# Distributes_Roles

./: README.md  pyproject.toml
Distributes_Roles/: functions.py  main.py
