[tool.poetry]
name = "distributes-roles"
version = "0.1.0"
description = ""
authors = ["Alex Timan <alexxtiman@gmail.com>"]
readme = "README.md"
packages = [{include = "distributes_roles"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
